src/test/deca/codegen/valid/ourTest/test_override_inside_methode.deca
// Resultats:
//  9
class A {
    int a;
    int b;
    int somme(int b){
        int a = 8;
        return a + b;
    }
}

{
    A a = new A();
    println(a.somme(1));
}
